# sysy-compiler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
ast/: ast.cc  ast.h  ast_context.cc  ast_context.h  ast_recursive_visitor.h  type.cc  type.h  type_visitor.h  types.h
base/: bounds.h  linked_list.cc  linked_list.h  logging.h  magic_enum.h  memory.h  ring_buffer.h  tree_dumper.h  type_casts.h  zone.cc  zone.h  zone_container.h
cmake/: deps.cmake
common/: global_context.cc  global_context.h  source_location.h  type.cc  type.h  type_visitor.h
ir/: argument.h  basic_block.h  constant.h  constant_data.h  function.h  global_variable.h  instruction.cc  instruction.h  ir_builder.cc  ir_builder.h  module.cc  module.h  type.h  use.cc  use.h  user.cc  user.h  value.cc  value.h
parse/: lexer.cc  lexer.h  parser.cc  parser.h  token.cc  token.h
parsing/: lexer.cc  lexer.h  parser.cc  parser.h  scanner.cc  scanner.h  token.cc  token.h
runtime/: sylib.cc  sylib.h  sysy.cc  sysy.h  sysy_lib.cc  sysy_lib.h
sema/: diagnostic.h  evaluator.cc  evaluator.h  scope.cc  scope.h  sema.cc  sema.h
semantic/: diagnostic.h  diagnostics.h  expression_evaluator.cc  expression_evaluator.h  scope.cc  scope.h  semantic_analyzer.cc  semantic_analyzer.h
tests/: fixtures_test.cc  utils.h
tests/base/: linked_list_test.cc  type_casts_test.cc  zone_test.cc
tests/parse/: fixtures_test.cc  lexer_test.cc  parser_test.cc  token_test.cc
tests/parsing/: fixtures_test.cc  lexer_fixtures.cc  lexer_test.cc  parser_test.cc  token_test.cc
tests/sema/: evaluator_test.cc  sema_test.cc
tests/semantic/: expression_evaluator_test.cc  semantic_analyzer_test.cc
